# synth911gen2

./: CHANGELOG.md  README.md  computer_aided_dispatch.csv  main.py  pyproject.toml  requirements.txt  serializer.py  spanish_test.csv  synth911.py  synth911gen.py  synthgui.py  synthgui_headless.py  test_2024.csv  test_2025.csv  test_mid_month.csv  test_output.csv  test_tui_and_gen.py  tui.py  webgui.py
.cursor/: README.md
.cursor/templates/adr/: adr_template_full.md  adr_template_lightweight.md  adr_template_madr.md  adr_template_nygard.md
.cursor/templates/architecture/: architecture_arc.md  architecture_enterprise.md  architecture_google.md
.cursor/templates/dependencies/: dependencies.md
.cursor/templates/deployment/: deployment.md
.cursor/templates/diagrams/: component_diagram.md  data_model_comprehensive.md  data_model_simple.md  er_diagram.md
.cursor/templates/onboarding/: onboarding_contributor.md  onboarding_developer.md  onboarding_user.md
.cursor/templates/operations/: database_operations.md
data/: distribution_analyzer.py  distribution_results_synth_seed2.txt  french_test.csv  output_test.csv  synth_seed_details.csv  synth_seed_details.ods  test_20250620.csv  test_jan1.csv  tui_test.csv
docs/: README.md  TODO.md  adr-0001-initial-architecture.md  architecture.md  data-security.md  dependencies.md  deployment.md  er-diagram.md  onboarding.md
docs/api/: constants.md  core.md
docs/examples/: basic.md  distribution_analysis.md
docs/guides/: cli-usage.md  development.md  installation.md  quickstart.md
shared/: __init__.py  constants.py
(+25 files in other folders)
