[project]
name = "synth911gen2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.4.0",
    "flask>=3.0.0",
    "fireducks>=1.2.8",
    "numpy>=2.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
    "scipy>=1.15.3",
    "textual>=0.56.4",
]

[tool.ruff]
line-length = 100
exclude = ["tests/*"]

[tool.typer]
python_version = "3.11"
